--- a/src/main/webapp/resources/css/medile.css
+++ b/src/main/webapp/resources/css/medile.css
@@ -257,9 +257,9 @@ i.glyphicon.glyphicon-play-circle {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-	-webkit- border-radius: 50%;
-	-0- border-radius: 50%;
-	-moz- border-radius: 50%;
+	-webkit-border-radius: 50%;
+	border-radius: 50%;
+	-moz-border-radius: 50%;
 }
 .ribben p {
     font-size:0.9em;
