--- a/src/main/webapp/resources/css/movieList.css
+++ b/src/main/webapp/resources/css/movieList.css
@@ -217,6 +217,9 @@ body {
     line-height: 1;
     color: black;
 }
+h6{
+	text-align: center;
+}
 html {
     font-size: 10px;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -285,4 +288,17 @@ strong{
     height: 60px;
     margin-top: 30px;
     border-bottom: 3px solid #241d1e;
+}
+#reservation{
+	border-color: #ffffff;
+	font-weight: bold;
+	color:white;
+	background-color: red;
+	
+}
+#detailShow{
+	border-color: #ffffff;
+	font-weight: bold;
+	color: white;
+	background-color: black;
 }
