--- a/src/main/webapp/resources/css/event.css
+++ b/src/main/webapp/resources/css/event.css
@@ -1,6 +1,106 @@
 @charset "UTF-8";
 /* 이벤트 그림, 글 배너
 */
+
+/* 이벤트 화면 상단부분 패딩
+*/
+.mt70 {
+    margin-top: 70px!important;
+}
+
+div {
+    display: block;
+}
+
+.tit-util .tit {
+    float: left;
+    padding: 0!important;
+    line-height: 1.1;
+}
+
+/* BBM Pick 부분
+*/
+
+h3.tit {
+    margin: 0;
+    padding: 0 0 16px 0;
+    font-size: 1.6em;
+    font-weight: 400;
+    color: #503396;
+    line-height: 1.1;
+}
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+
+/* 이벤트 파트별 화면단 
+*/
+.event-list {
+    overflow: hidden;
+}
+
+.mt15 {
+    margin-top: 15px!important;
+}
+
+body {
+    overflow: auto;
+    overflow-y: scroll;
+    letter-spacing: 0;
+    line-height: 1.5;
+    font-size: 15px;
+    color: #444;
+    font-weight: 400;
+    font-family: NanumBarunGothic,Dotum,'돋움',sans-serif;
+}
+
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+.event-list ul li {
+    position: relative;
+    float: left;
+    width: 245px;
+    margin: 0 0 0 40px;
+    padding: 0;
+}
+
+
+.event-list ul li a {
+    overflow: hidden;
+    display: block;
+    border: 1px solid #e4e4e4;
+    border-radius: 10px;
+    min-height: 297px;
+}
+
+a:link {
+    color: #444;
+    text-decoration: none;
+}
+
+a {
+    background-color: transparent;
+}
+
+
+
+
 .event-list ul li a .img {
     width: 100%;
     height: 244px;
@@ -15,3 +115,26 @@
     margin: 0;
     padding: 0;
 }
+
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+a:link {
+    color: #444;
+    text-decoration: none;
+}
+
+.event-list ul li a .img img {
+    width: 100%!important;
+    height: 243px!important;
+}
+
+img {
+    border: 0;
+}
+
