--- a/src/main/webapp/resources/css/noticeList.css
+++ b/src/main/webapp/resources/css/noticeList.css
@@ -1,243 +1,43 @@
-/* *********************************************************************************
- *	탭메뉴 2021년도
- * *********************************************************************************/
-/* 공지사항 메뉴 바
-*/
+@charset "UTF-8";
 
- #content .sub_tit p {
-    overflow: hidden;
-    padding: 19px 30px 20px 30px;
-    border-radius: 30px;
-    background: #f9fbfd url(../../images/layout/bg_sub_top.png) 100% 0 no-repeat;
-    background-size: cover;
-    font-size: 15px;
-    line-height: 1.4;
-    color: #305c94;
+li {
+    list-style: none;
+    display: list-item;
+    text-align: -webkit-match-parent;
 }
- 
- .tab_menu {position:relative; height:60px; margin-bottom:30px;}
- .tab_menu li {position:relative; float:left;}
- .tab_menu li a:after {content:''; position: absolute; top: 38%; left: -1px; width: 1px; height: 18px; background-color: #ddd;}
- .tab_menu li:first-child a:after,
- .tab_menu li a.on + li a:after {display: none;}
- .tab_menu li a {display: flex; display: -ms-flexbox; align-items: center; -ms-flex-align: center; justify-content: center; -ms-flex-pack: center; position:relative; min-height: 59px; background:#f6f7fb; padding: 5px 1px; border-bottom: 2px solid #063863; font-size:15px; line-height:1.1; color:#666; word-break: break-all; text-align:center; text-decoration:none; letter-spacing: -1px;}
- .tab_menu li a:hover, 
- .tab_menu li a:focus, 
- .tab_menu li a.on {background:#fff; font-weight: bold; color:#063863;}
- .tab_menu li a:hover:before, 
- .tab_menu li a:focus:before, 
- .tab_menu li a.on:before {content:''; position:absolute; top:0; left: 0; z-index: 1; width: 100%; height: 100%; border-radius: 3px 3px 0 0; border-top: 2px solid #063863; border-left: 2px solid #063863; border-right: 2px solid #063863; background-color: transparent;}
- .tab_menu li a:hover:after, 
- .tab_menu li a:focus:after, 
- .tab_menu li a.on:after {display: none;}
- .tab_menu li .tab {position:absolute;left:0;top:52px;width:100%;padding-top:15px}
- 
-
- 
- 
- 
-/* 게시판 검색, 검색 버튼
-*/
-.board_search {
+.contactus {
+    border: 1px solid #e2e2e2;
+    display: block;
     position: relative;
-    margin-bottom: 30px;
-    padding: 19px 30px 20px 30px;
-    border-radius: 30px;
-    font-size: 15px;
-    line-height: 1.4;
-    box-sizing: border-box;
-    background-size: cover;
-    background-color: #f6f7fb;
-}
-
-.board_search .sch_sel {
     border-radius: 3px;
+    background: url(/resources/images/icon_contactus_bg.png) no-repeat;
+    background-size: 145px 100%;
+    margin: 20px 0;
+    word-break: break-all;
 }
 
-
-select {
-    border: 1px solid #ddd;
-    border-radius: 3px;
-    background-color: #fff;
-    height: 34px;
-    line-height: 34px;
-    font-size: 14px;
-}
-button, select, input, textarea, label, img {
-    font: inherit;
-    border: 0;
-}
-
-select {
-    text-rendering: auto;
-    color: -internal-light-dark(black, white);
-    letter-spacing: normal;
-    word-spacing: normal;
-    line-height: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: start;
-    appearance: auto;
-    box-sizing: border-box;
-    align-items: center;
-    white-space: pre;
-    -webkit-rtl-ordering: logical;
-    background-color: -internal-light-dark(rgb(255, 255, 255), rgb(59, 59, 59));
-    cursor: default;
-    margin: 0em;
-    border-width: 1px;
-    border-style: solid;
-    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-    border-image: initial;
-    border-radius: 0px;
-}
-
-.board_search .search .sch_tbox label + input {
-    border-radius: 3px;
-}
-.board_search .search .sch_tbox input {
-    width: 35%;
-    padding: 0 0.5%;
-    border-radius: 0;
-    border-color: #ddd;
-    border-radius: 0 3px 3px 0;
-}
-input[type="text"], input[type="password"] {
-    border-radius: 3px;
-    border: 1px solid #ddd;
-    background-color: #fff;
-    height: 32px;
-    line-height: 32px;
-    font-size: 14px;
-}
-
-.btn.sch:hover, .btn.sch:focus {
-    background-color: #508c28;
-}
-.btn.sch {
-    right: 0;
-    top: 0;
-    border-radius: 3px;
-    background-color: #063863;
-}
-
-.btn.sch {
-    border: 0;
-    padding: 0;
-    width: 74px;
-    height: 34px;
-    line-height: 34px;
-    color: #fff;
-    font-size: 15px;
-    background: #063863;
+.contactus li:first-child {
+    float: left;
+    width: 125px;
     text-align: center;
-}
-.btn:hover, .btn:focus {
-    text-decoration: none;
-}
-.btn {
-    display: inline-block;
-    border-radius: 3px;
-    color: #fff;
-    font-size: 14px;
-    line-height: 14px;
-    transition: all .3s;
-}
-button {
-    background: transparent;
-    cursor: pointer;
-    border: 0;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
-}
-button {
-    appearance: auto;
-    text-rendering: auto;
-    color: -internal-light-dark(black, white);
-    letter-spacing: normal;
-    word-spacing: normal;
-    line-height: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: center;
-    align-items: flex-start;
-    cursor: default;
-    box-sizing: border-box;
-    background-color: -internal-light-dark(rgb(239, 239, 239), rgb(59, 59, 59));
-    margin: 0em;
-    padding: 1px 6px;
-    border-width: 2px;
-    border-style: outset;
-    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-    border-image: initial;
+    color: #063863;
+    font-weight: normal;
+    background: url(/resources/images/contact3.png) no-repeat 15px center;
+    padding: 0 10px 0 25px;
+    position: absolute;
+    top: 34%;
+    left: 0;
 }
 
-
-
-/* 게시물 목록
-*/
-.b_list {
-    table-layout: fixed;
-}
-
-.tbl {
-    width: 100%;
-    border-collapse: collapse;
-    border-top: 2px solid #063863;
-    line-height: 20px;
-}
-
-table {
-    width: 100%;
-    border-spacing: 0;
-}
-
-table {
-    display: table;
-    border-collapse: separate;
-    box-sizing: border-box;
-    text-indent: initial;
-    border-spacing: 2px;
-    border-color: grey;
-}
-
-/* 이전으로 가기 버튼부터 숫자 버튼 그리고 다음으로 가기 버튼 순
-*/
-button, select, input, textarea, label, img {
-    font: inherit;
-    border: 0;
-}
-img {
-    max-width: 100%;
-    vertical-align: middle;
-}
-
-fieldset, img {
-    border: 0;
-}
-
-
-/* 문의 안내 양식
-*/
 .contactus li:last-child {
     float: left;
     width: auto;
     padding: 15px 15px 15px 165px;
     font-weight: normal;
 }
-.contactus li:last-child {
-    float: left;
-    width: auto;
-    padding: 15px 15px 15px 165px;
+
+.contactus:after {
+    clear: both;
+    display: block;
+    content: "";
 }
-ol, ul, li, dl, dt, dd {
-    list-style: none;
-}
-
-
-
