--- a/src/main/webapp/resources/css/signin.css
+++ b/src/main/webapp/resources/css/signin.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: black;
 }
 
 .form-signin {
@@ -19,8 +19,21 @@ body {
   padding: 15px;
   margin: auto;
 }
+.form-signin .h3 {
+  color: red;
+  font-size: 50px;
+}
+.form-signin .sr-only{
+  border-color: black;
+  margin: 100px;
+}
 .form-signin .checkbox {
   font-weight: 400;
+  color: white; 
+}
+.form-signin .btn{
+	background: red;
+	border-color: red;
 }
 .form-signin .form-control {
   position: relative;
