Commit Push error completed

--- a/src/main/webapp/resources/css/replyAll.css
+++ b/src/main/webapp/resources/css/replyAll.css
@@ -5,11 +5,11 @@
 	background-color: white;
 	color: black;
 	font-weight: bold;
-	width: 70%;
+	width: 85%;
+	height: 60px;
 	
 }
 #replyer{
-	background-color : black;
 	color: white;
 	font-weight: bold;
 }
