--- a/src/main/webapp/resources/css/store.css
+++ b/src/main/webapp/resources/css/store.css
@@ -118,16 +118,15 @@ img {
 
 .event-list ul li a .tit {
     overflow: hidden;
-    height: 60px;
-    margin: 0 0 10px 0;
-    padding: 20px 17px 0 17px;
+    height: 25px;
+    padding: 7px 17px 7px 17px;
     line-height: 1.3;
     font-weight: 700;
     color: #222;
 }
 
 .event-list ul li a .date {
-    padding: 0 17px 20px 17px;
+    padding: 0 17px 0 17px;
     font-size: 1em;
     line-height: 1.1;
     color: #666;
