--- a/src/main/webapp/resources/css/reserve.css
+++ b/src/main/webapp/resources/css/reserve.css
@@ -123,7 +123,7 @@ body {
 /* content */
 
 .reserve-container {
-    margin-top: 65px;
+   /* margin-top: 65px;*/
     display: flex;
     justify-content: center;
     height: 800px;
