공지사항 이미지 일부 수정, 공지사항 게시판 순서 수정, 이벤트 이미지 수정

--- a/src/main/webapp/resources/css/eventlist.css
+++ b/src/main/webapp/resources/css/eventlist.css
@@ -69,6 +69,8 @@ ul {
 li {
     display: list-item;
     text-align: -webkit-match-parent;
+    list-style: none;
+    padding-left: 0px;
 }
 
 * {
