공지사항 버튼 색상, 게시판 상단 부분 색상 변경

--- a/src/main/webapp/resources/css/noticemodify.css
+++ b/src/main/webapp/resources/css/noticemodify.css
@@ -17,7 +17,7 @@
 }
  
 .test_obj input[type="radio"]:checked + span {
-        background-color: #113a6b;
+        background-color: black;
         color: #fff;
 }
 
