--- a/src/main/webapp/resources/css/noticeread.css
+++ b/src/main/webapp/resources/css/noticeread.css
@@ -16,7 +16,7 @@
 }
  
 .test_obj input[type="radio"]:checked + span {
-        background-color: #113a6b;
+        background-color: black;
         color: #fff;
 }
 
