--- a/src/main/webapp/resources/css/eventread3.css
+++ b/src/main/webapp/resources/css/eventread3.css
@@ -16,7 +16,7 @@
 	margin-top: 30px;
 	width: 940px;
     padding: 4px;
-    border: 7px solid #ff8080;
+    border: 7px solid black;
     border-radius: 50px;
     background-size: 145px 100%;
     margin-right: auto;
