공지사항 디자인 수정

--- a/src/main/webapp/resources/css/noticeinsert.css
+++ b/src/main/webapp/resources/css/noticeinsert.css
@@ -17,6 +17,7 @@
 .test_obj input[type="radio"]:checked + span {
         background-color: black;
         color: #fff;
+        font-weight: bold;
 }
 
 .form-group {
