--- a/src/main/webapp/resources/css/store.css
+++ b/src/main/webapp/resources/css/store.css
@@ -68,6 +68,8 @@ ul {
 li {
     display: list-item;
     text-align: -webkit-match-parent;
+     list-style: none;
+    padding-left: 0px;
 }
 
 * {
