--- a/src/main/webapp/resources/css/reserve.css
+++ b/src/main/webapp/resources/css/reserve.css
@@ -143,7 +143,10 @@ ul {
     font-size: 10px !important;
 }
 
-
+#reserveButton-active{
+	background-color: blue;
+	
+}
 /* content */
 
 .reserve-container {
@@ -170,22 +173,22 @@ ul {
 
 .movie-part {
     width: 284px;
-    height: 600px;
+    height: 800px;
 }
 
 .theater-part {
     width: 264px;
-	height: 600px;
+	height: 800px;
 }
 
 .day{
     width: 91px;
-	height: 600px;
+	height: 800px;
 }
 
 .time-part {
     width: 384px;
-	height: 600px;
+	height: 800px;
 }
 
 .sort-wrapper {
