--- a/src/main/webapp/resources/css/signin.css
+++ b/src/main/webapp/resources/css/signin.css
@@ -55,3 +55,8 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.w3layouts_logo a {
+    display: block;
+    text-decoration: none;
+}
