--- a/src/main/webapp/resources/css/medile.css
+++ b/src/main/webapp/resources/css/medile.css
@@ -300,6 +300,7 @@ i.glyphicon.glyphicon-play-circle {
 .w3_agile_banner_bottom_grid {
     padding: 2em 1em;
     box-shadow: 0px 0px 1px #999;
+    width: 900px;
 }
 h4.latest-text {
     
