--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -259,10 +259,12 @@ color: white;
 }
 
 .navbar-nav>li {
-	float: left;
-	border-right: 1px dotted #fff;
-	width: 14.27%;
-	text-align: center;
+   float: left;
+   border-left: 1px dotted #fff;
+   border-right: 1px dotted #fff;
+   width: 18%;
+   text-align: center;
+  
 }
 
 .w3_home_act {
