--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -256,13 +256,17 @@ color: white;
 .navbar-default .navbar-nav>li>a {
 	color: #fff;
 	text-transform: uppercase;
+
 }
 
 .navbar-nav>li {
 	float: left;
+	border-left: 1px dotted #fff;
 	border-right: 1px dotted #fff;
-	width: 14.27%;
+	width: 20%;
 	text-align: center;
+	
+	
 }
 
 .w3_home_act {
