--- a/src/main/webapp/resources/css/step1.css
+++ b/src/main/webapp/resources/css/step1.css
@@ -4,7 +4,7 @@ body {
 }
 
 body {
-	background-color: black;
+	background-color: #CCE5FF;
 	padding-top: 40px;
   	padding-bottom: 40px;
 }
@@ -15,7 +15,7 @@ body {
 }
 
 .h3 {
-	color: red;
+	color: #000;
 	font-size: 50px;
 	text-align: center;
 	text-decoration-color: #000
@@ -27,10 +27,16 @@ body {
 }
 
 label{
-	color: white;
+	color: black;
 	display: inline-block;
     margin-bottom: -0.3rem;
 }
+
+#confirm {
+	background-color: black;
+	color: white;
+}
+
 
 /* input[type=checkbox] {
     display:none;
@@ -49,7 +55,7 @@ input[type=checkbox]:disabled + label {
     background-image: url('../images/checker-disabled.svg');
 } */
 
-input[type="checkbox"]+label {
+/* input[type="checkbox"]+label {
     display: inline-block;
     width: 24px;
     height: 24px;
@@ -62,4 +68,4 @@ input[type='checkbox']:checked+label {
 
 input[type="checkbox"] {
     display: none;
-}
+} */
