--- a/src/main/webapp/resources/css/step2.css
+++ b/src/main/webapp/resources/css/step2.css
@@ -4,7 +4,7 @@ body {
 }
 
 body {
-	background-color: black;
+	background-color: #CCE5FF;
 	padding-top: 40px;
   	padding-bottom: 40px;
   	margin-bottom: 40px;
@@ -25,7 +25,7 @@ body {
 }
 
 .h3 {
-	color: red;
+	color: black;
 	font-size: 50px;
 	text-align: center;
 	text-decoration-color: #000
@@ -33,9 +33,17 @@ body {
 
 
 label{
-	color: white;
+	color: black;
 }
 
-button{
+/* button{
 	width: 480;
+}
+ */
+.btn{
+	background: black;
+	color: white;
+	width: 70%;
+	margin-left: 100px;
+	
 }
