--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -217,6 +217,8 @@ color: white;
 
 .w3l_sign_in_register ul li i, .w3l_sign_in_register ul li:first-child {
 	padding-right: 1em;
+	color: black;
+	font-weight: bold;
 }
 /*-- //header --*/
 /*-- nav --*/
